fixed the social media post overlapping issue

--- a/src/app/social-media/social-media-post-list/social-media-post-list.component.scss
+++ b/src/app/social-media/social-media-post-list/social-media-post-list.component.scss
@@ -1,13 +1,16 @@
 @import "../../../assets/styles/variables.scss";
 @import '../../../assets/styles/layout.scss';
 
-.social-media-post {
-    min-height: 300px;
+.card-no-border {
+  border: none;
 }
 
 .card-columns {
-    @include media-breakpoint-only(xxl) {
+    @include media-breakpoint-only(xxxl) {
       column-count: 5;
+    }
+    @include media-breakpoint-only(xxl) {
+      column-count: 4;
     }
     @include media-breakpoint-only(xl) {
       column-count: 3;
